# libgeo

./: README.md
geo/: CMakeLists.txt  README  coordinates.hpp  csconvert.cpp  csconvert.hpp  csconvertor.cpp  csconvertor.hpp  csconvertorWithoutGdal.cpp  cv.hpp  dem.cpp  dem.hpp  enu.cpp  enu.hpp  featurelayers.cpp  featurelayers.hpp  gdal.cpp  gdal.hpp  gdsblockwriter.cpp  gdsblockwriter.hpp  geodataset.cpp  geodataset.hpp  geotransform.cpp  geotransform.hpp  heightcoding-io.cpp  heightcoding.cpp  heightcoding.hpp  heightconvertor.cpp  heightconvertor.hpp  io.cpp  io.hpp  ogrpolygon.cpp  ogrpolygon.hpp  options.hpp  po.hpp  project.cpp  project.hpp  srs.hpp  srsdef.cpp  srsdef.hpp  srsdefWithoutGdal.cpp  (+7 more)
geo/detail/: gdalwarpoperation.cpp  gdalwarpoperation.hpp  options.hpp  ovrdataset.hpp  ovrdataset.new.cpp  ovrdataset.old.cpp  pjfactors-4.7.h  pjfactors-4.8.h  pjfactors.c  pjfactors.h  projapi.hpp  project.6.cpp  project.pre6.cpp  srs.cpp  srs.hpp  warpmemorymeter.cpp  warpmemorymeter.hpp
geo/python/: CMakeLists.txt  gdsblockwriter.cpp  gdsblockwriter.dummy.cpp  gdsblockwriter.hpp  geomodule.cpp  geomodule.hpp
geo/test/: generate.cpp
geo/test-factors/: CMakeLists.txt  main.cpp
geo/test-geoid/: CMakeLists.txt  main.cpp
geo/test-hconv/: CMakeLists.txt  csconv.cpp  hconv.cpp
geo/test-heightmodel/: CMakeLists.txt  main.cpp
geo/test-srs/: CMakeLists.txt  geo-cs2cs.cpp  geo-srsconv.cpp  geo-srsinfo.cpp
geo/tools/: CMakeLists.txt  asc2gtx.cpp  geoinfo.cpp  srs-asc2gtx.cpp
